tests/ui/parse_not_zero_args.stderr
error: proc-macro derive panicked
  --> $DIR/parse_not_zero_args.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: parse must have exactly one argument, problematic tokens: ( parse ( from_str , from_str ) )
